@@ -2048,9 +2048,9 @@ You can also:
 
 <p>
 ```{r the_end}
-   ######    ##   ##    ##   ##    ######     #####  #####
- ##         ##===##    ## \\##   ##    ##     \\       //
- ######    ##   ##    ##   ##    ######    #####      #####
+   ######  ##   ##  ##   ##   ######  ##### #####
+ ##       ##===##  ## \\##  ##    ##   \\     //
+ ######  ##   ##  ##   ##   ######  #####    #####
 ```
 </p>
 
